patch - adding all videos

--- a/docs/api-specification/transactions.mdx
+++ b/docs/api-specification/transactions.mdx
@@ -6,6 +6,7 @@ description:
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import ReactPlayer from 'react-player/youtube'
 
 # Transactions
 
@@ -60,6 +61,12 @@ There are five transaction types (ZumRailsType):
 :::
 
 ![Zūm Payment Methods](/img/docs/diagrams/flows/Illustrative_flow1.png)
+
+
+<ReactPlayer className='react-player'
+          controls='true'
+          width='100%'
+          url='https://www.youtube.com/watch?v=XL6imA-_Gvs' />
 
 ## Creating a new transaction
 
