--- a/docs/invoice-and-subscription/product.mdx
+++ b/docs/invoice-and-subscription/product.mdx
@@ -3,8 +3,7 @@ title: Products and Prices
 description:
   How products works.
 ---
-
-# Products and Prices
+import ReactPlayer from 'react-player/youtube'
 
 ## What is a product?
 
@@ -28,6 +27,14 @@ Pricing models reflect your business revenue model. We currently offer the below
 - Package pricing—Charge by the package, or group of units, like charging $15.00 CAD for every 5 units. Purchases are rounded up by default, so a customer buying 8 units would pay  $30.00 CAD.
 
 Here’s how you can create products/prices:
+
+<ReactPlayer className='react-player'
+          controls='true'
+          width='100%'
+          url='https://www.youtube.com/watch?v=7em4Fla50Y8' />
+
+
+<br/>
 
 ![Create a product flow](/img/docs/diagrams/flows/flow19.png)
 
