--- a/docs/invoice-and-subscription/invoice.mdx
+++ b/docs/invoice-and-subscription/invoice.mdx
@@ -3,6 +3,8 @@ title: Invoices
 description:
   How invoices works.
 ---
+import ReactPlayer from 'react-player/youtube'
+
 
 ## How invoices work
 
@@ -16,6 +18,14 @@ Here’s how you can create an invoice:
 If your invoice is configured to be charged automatically to the user on the available payment method, Zūm Rails will automatically finalize your invoice and attempt payment. 
 Once the transaction for the payment is successful, the user will receive an invoice over their email confirming the same. 
 If your invoice is configured to be billed by sending an email to the user with a link to pay, then Zūm Rails will email the invoice to your user and await payment. These emails will contain a link to a hosted page to pay the invoice. 
+
+<ReactPlayer className='react-player'
+          controls='true'
+          width='100%'
+          url='https://www.youtube.com/watch?v=UdU7doF9MYo' />
+
+
+<br/>
 
 Here’s what happens after the invoice has been created based on the payment selections:
 
