harmonize event listener attributes

--- a/docs/payments/ways-to-integrate.mdx
+++ b/docs/payments/ways-to-integrate.mdx
@@ -162,9 +162,9 @@ To listen to the js event, your website must refer to Zūm Connect using an iFra
   ```json
   {
     "origin": "ZUM_RAILS_IFRAME",
-    "InvoiceId": "c18dd952-...-9bd6a46eb1c4",
-    "UserId": "c18dd952-...-9bd6a46eb1c4",
-    "TransactionId": "c18dd952-...-9bd6a46eb1c4"
+    "invoiceId": "c18dd952-...-9bd6a46eb1c4",
+    "userId": "c18dd952-...-9bd6a46eb1c4",
+    "transactionId": "c18dd952-...-9bd6a46eb1c4"
   }
   ```
 
@@ -174,7 +174,7 @@ To listen to the js event, your website must refer to Zūm Connect using an iFra
   ```json
   {
     "origin": "ZUM_RAILS_IFRAME",
-    "UserId": "c18dd952-...-9bd6a46eb1c4",
+    "userId": "c18dd952-...-9bd6a46eb1c4",
   }
   ```
   
@@ -209,9 +209,9 @@ To listen to the js event, your website must refer to Zūm Connect using an iFra
   ```json
   {
     "origin": "ZUM_RAILS_IFRAME",
-    "SubscriptionId": "c18dd952-...-9bd6a46eb1c4",
-    "UserId": "c18dd952-...-9bd6a46eb1c4",
-    "TransactionId": "c18dd952-...-9bd6a46eb1c4"
+    "subscriptionId": "c18dd952-...-9bd6a46eb1c4",
+    "userId": "c18dd952-...-9bd6a46eb1c4",
+    "transactionId": "c18dd952-...-9bd6a46eb1c4"
   }
   ```
 
@@ -221,7 +221,7 @@ To listen to the js event, your website must refer to Zūm Connect using an iFra
   ```json
   {
     "origin": "ZUM_RAILS_IFRAME",
-    "UserId": "c18dd952-...-9bd6a46eb1c4",
+    "userId": "c18dd952-...-9bd6a46eb1c4",
   }
   ```
   
