--- a/docs/api-specification/transactions.mdx
+++ b/docs/api-specification/transactions.mdx
@@ -582,6 +582,8 @@ CreatedAt | datetime | no | Create date
 CreatedAtOperator | string | no | Operator to filter with CreatedAt properties 
 UserId | string | no | User id
 ClientTransactionId | string | no | The Transaction id you informed in the creation of the transaction
+Memo | string | no | Memo field
+Comment | string | no | Comment field
 **Pagination** | | no |
 PageNumber | number | no | The respective page, starting at 1
 
