--- a/docs/data-aggregation/configure.mdx
+++ b/docs/data-aggregation/configure.mdx
@@ -6,7 +6,7 @@ description:
 
 # Configure
 
-You can find bellow and easy way to configure the experience of the connector.
+You can find below and easy way to configure the experience of the connector.
 
 On the left side you can configure the user experience and the interace by clicking the dropdown menu. Click to apply and check the right side how it looks like.
 
