fix below typos

--- a/docs/data-aggregation/connector-sdk.mdx
+++ b/docs/data-aggregation/connector-sdk.mdx
@@ -69,7 +69,7 @@ Each token is valid only once, for 15 minutes.
 
 ## Install JS SDK 
 
-Refer the js library bellow into your website.
+Refer the js library below into your website.
 
 <Tabs
   defaultValue="tab1"
@@ -96,7 +96,7 @@ Parameter | Description
 token | The token received in the endpoint `{{env}}/api/aggregationconnector/createtoken`
 config | A json config representing all the configurations available and described [here](#configuration)
 
-Bellow you can find an example of the code needed to init the JS SDK.
+Below you can find an example of the code needed to init the JS SDK.
 
 <Tabs
   defaultValue="tab1"
