--- a/docs/data-aggregation/connector-ui.mdx
+++ b/docs/data-aggregation/connector-ui.mdx
@@ -18,7 +18,7 @@ We recommend you using the **[Configure](./configure)** page to build your URL.
 
 ## Access the data
 
-After a new connection is made, if you are using the Connector UI, the data can be available to you in different ways, listed bellow:
+After a new connection is made, if you are using the Connector UI, the data can be available to you in different ways, listed below:
 
 ### Access the data in Zūm Rails portal
 
@@ -26,7 +26,7 @@ For every new connection made for an specific card, a new user will be automatic
 
 ### Access the data via javascript event listener
 
-Every interaction with the UI triggers a javascript event listener that your host page can listen to. Each message has a step as described bellow.
+Every interaction with the UI triggers a javascript event listener that your host page can listen to. Each message has a step as described below.
 
 
 <Tabs
