patch - adding adduserinportal parameter

--- a/docs/data-aggregation/parameters.mdx
+++ b/docs/data-aggregation/parameters.mdx
@@ -27,6 +27,7 @@ Parameter | Description | Default value | Required
 consent | When true, display the consent page. This page explains to the end user what information will be extracted, as well let the end user agree with the terms & conditions | true | false
 accountselector | Display a page to select the preferred account, usually used for EFT payment initiation.  | true | false
 testinstitution | Display Zūm Rails test institution, used while you are testing | false | false
+adduserinportal | Add connected users in Zūm Rails Portal | true | false
 
 ### Configure the user interface
 
