feature - back button iframe

--- a/docs/payments/ways-to-integrate.mdx
+++ b/docs/payments/ways-to-integrate.mdx
@@ -69,6 +69,7 @@ displayZumRailsLogo| To display the powered by Zūm Rails logo
 displayPhoneNumber| To display the phone number field
 displayAccountType| To display account type option
 displayFullName| To display a full name field instead of first and last name fields when the user chooses Personal as account type. (It can be pre-filled with firstName query param)
+hideBackButton| To hide all back buttons
 hideShippingAddress| To hide the shipping address
 hideRailsName| To hide the rails name when there is just one 
 hideFirstName*| To hide the first name field 
