fixing sdk reference

--- a/docs/data-aggregation/connector-sdk.mdx
+++ b/docs/data-aggregation/connector-sdk.mdx
@@ -69,7 +69,7 @@ Each token is valid only once, for 15 minutes.
 
 ## Install JS SDK 
 
-Refer the js library below into your website. One url for sandbox, another one for production.
+Refer the js library below into your website. One url for sandbox, another one
 
 <Tabs
   defaultValue="tab1"
@@ -78,14 +78,20 @@ Refer the js library below into your website. One url for sandbox, another one f
     {label: 'Production', value: 'tab2'},
   ]}>
   <TabItem value="tab1">
-  ```html
+
+  ```javascript
     <script id="zumrailsconnector" src="https://cdn.aggregation.zumrails.com/sandbox/connector.js" type="text/javascript" async=""></script>
   ```
+
   </TabItem>
   <TabItem value="tab2">
-  ```html
+
+
+  ```javascript
     <script id="zumrailsconnector" src="https://cdn.aggregation.zumrails.com/production/connector.js" type="text/javascript" async=""></script>
   ```
+
+
   </TabItem>
 </Tabs>
 
