--- a/docs/data-aggregation/connector-sdk.mdx
+++ b/docs/data-aggregation/connector-sdk.mdx
@@ -219,6 +219,6 @@ SECURITYQUESTIONPROMPTED | When a security question is prompted
 SECURITYQUESTIONANSWERINITIATED | When the security question is answered and we resume the authentication
 AUTHENTICATECOMPLETED | When authentication is completed
 GETINFORMATIONINITIATED | When the get card information process starts
-GETINFORMATIONCOMPLETED | When the get card information process starts
+GETINFORMATIONCOMPLETED | When the get card information process completes
 CONNECTIONSUCCESSFULLYCOMPLETED | When the process is completed
 GENERICERROR | When an unexpected error occurs
