--- a/docs/data-aggregation/testing.mdx
+++ b/docs/data-aggregation/testing.mdx
@@ -37,7 +37,7 @@ zummultiplechoicequestionwithsingleanswer | rails
 
 ### Security question with multiple options
 
-This option is used with institutions that prompt SMS or Email verification, when they give a list of phones and a list options (SMS/Phone Call/Email) to send the verification code.
+This option is used with institutions that prompt SMS or Email verification, when they give a list of phones and a list of options (SMS/Phone Call/Email) to send the verification code.
 
 Username | Password
  ----- | ----
