feature - update documentation

--- a/docs/payments/ways-to-integrate.mdx
+++ b/docs/payments/ways-to-integrate.mdx
@@ -111,13 +111,13 @@ YT|Yukon
 
 Examples:
 
-`{{env}}/connect/{{customerId}}?accountType=personal&firstname=Name&lastname=Last&email=user@zumrails.com`
+`{{env}}/connect-adduser/{{customerId}}?accountType=personal&firstname=Name&lastname=Last&email=user@zumrails.com`
 
-`{{env}}/connect/{{customerId}}/{{requestFundsId}}?accountType=personal&memo=memo&comment=here%20is%20an%20example%20comment`
+`{{env}}/connect-adduser/{{customerId}}/{{requestFundsId}}?accountType=personal&memo=memo&comment=here%20is%20an%20example%20comment`
 
-`{{env}}/connect/{{customerId}}?allowEft=true&language=fr`
+`{{env}}/connect-adduser/{{customerId}}?allowEft=true&language=fr`
 
-`{{env}}/connect/{{customerId}}?allowEft=true&allowInterac=true`
+`{{env}}/connect-adduser/{{customerId}}?allowEft=true&allowInterac=true`
 
 ### Event Listeners
 
