--- a/docs/api-specification/users.mdx
+++ b/docs/api-specification/users.mdx
@@ -246,7 +246,7 @@ Parameter | Type | Description
 id | guid | User id
 
 ## Update credit card information
-Use this endpoint if you want to edit the credit card information from a user. The user id is informed in the url and the body payload contains the user information.
+Use this endpoint if you want to edit the credit card information for a user. The user id is informed in the url and the body payload contains the user information.
 
 <Tabs
   defaultValue="tab1"
