--- a/docs/payments/ways-to-integrate.mdx
+++ b/docs/payments/ways-to-integrate.mdx
@@ -171,7 +171,7 @@ The Iframe will display the products/prices to the user and they can choose what
 :::
 
 ### Invoice checkout using URL
-![flow18](https://user-images.githubusercontent.com/85119178/162321462-af92dcf6-d3f0-4713-a3e4-3409597c6f30.png)
+![flow18](/img/docs/diagrams/flows/flow18.png)
 
 ### Event Listener
 When a new invoice is created through checkout, Zūm Connect will trigger an event to provide to your application the UserId, TransactionId or InvoiceId.
