--- a/docs/api-specification/users.mdx
+++ b/docs/api-specification/users.mdx
@@ -591,7 +591,7 @@ Some credit cards do not allow Visa Direct, if they have a credit card informed 
 `Endpoint: {{env}}/api/user/{user_id}`
 
 Use this endpoint if you want to delete a user. The user id is informed in the url.
-When deleting a user, all transactions already created for the respective user will remain active, but the user data will be completely erased.
+When deleting a user, all transactions already created for the respective user will remain active, but the user's data will be completely erased.
 
 ## Search for a user
 
