--- a/docs/api-specification/wallets.mdx
+++ b/docs/api-specification/wallets.mdx
@@ -42,7 +42,7 @@ description:
 
 `Endpoint: {{env}}/api/wallet`
 
-All the information from the Zūm Wallets can be pulled with one API call. The information includes the wallet type, the wallet ID and the balance. A useful example for this endpoint is when using a Zūm wallet for AP or AR, the Wallet ID is mandatory.
+All the information from the Zūm Wallets can be pulled with one API call. The information includes the wallet type, the wallet ID and the balance. A useful example for this endpoint is when using the Zūm wallet for AP or AR, the Wallet ID is mandatory.
 
 **Response**
 
