--- a/docs/api-specification/transactions.mdx
+++ b/docs/api-specification/transactions.mdx
@@ -288,7 +288,7 @@ EftFailedDefaultByAFinancialInstitution |                                       
 
 
 :::note
-You can simulate late failures (Failure after transaction completion) by using a comment: (event name), Latefailure. This feature is only avalible for EFT transaction error. If the string is incorrect, the transaction will fail with the event specified within it..
+You can simulate late failures (Failure after transaction completion) by using a comment: (event name), Latefailure. This feature is only avalible for EFT transaction error. If the string is incorrect, the transaction will fail with the event specified within it.
 :::
 
 :::caution
